[package]
name = "gameactivitybot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
shuttle-serenity = "0.27.0"
shuttle-runtime = "0.27.0"
shuttle-service = "0.27.0"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache", "unstable_discord_api", "utils"] }
shuttle-secrets = "0.27.0"
tokio = "1.22.0"
tracing = "0.1.37"
shuttle-shared-db = { version = "0.27.0", features = [ "postgres", "postgres-rustls" ] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "macros" ] }
chrono = "0.4.31"
